@@ -12,7 +12,7 @@ Goal "(subst_term ((subst_term f1) o f2) t) =  \
   \  (subst_term f1 (subst_term f2 t)) &  \
   \  (subst_term_list ((subst_term f1) o f2) ts) =  \
   \  (subst_term_list f1 (subst_term_list f2 ts))";
-by (mutual_induct_tac ["t", "ts"] 1);
+by (induct_tac "t ts" 1);
 by (ALLGOALS Asm_full_simp_tac);
 qed "subst_comp";
 
@@ -23,7 +23,7 @@ bind_thm ("term_induct2", prove_goal thy
    \  !!f ts. list_all P ts ==> P (App f ts) |] ==>  \
    \    P t & list_all P ts"
   (fn prems =>
-    [mutual_induct_tac ["t", "ts"] 1,
+    [induct_tac "t ts" 1,
      resolve_tac prems 1,
      resolve_tac prems 1,
      atac 1,
